--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "jshint": "~2.1.11"
+    "jshint": "~2.1.11",
+    "mocha": "^2.2.1"
   },
   "optionalDependencies": {},
   "engines": {
